@@ -1,3 +1,3 @@
 Paulo Pizarro  <paulo.pizarro@gmail.com>
 Tiago Katcipis <tiagokatcipis@gmail.com>
-
+Guilherme Silveira <xguiga@gmail.com>
